--- a/front/src/components/system/modal.module.css
+++ b/front/src/components/system/modal.module.css
@@ -7,7 +7,7 @@
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: 2;
+  z-index: 1;
   padding: 32px;
 }
 
